[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077ba1d54b92cdef3e171a730b819d5eeb8e", features = [
    "json",
    "uuid",
    "secrets",
] }
rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077ba1d54b92cdef3e171a730b819d5eeb8e", features = [
    "sqlx_postgres",
] }
sea-orm = { version = "0.2", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["v4", "v5", "serde"] }
rust-crypto = "0.2.36"
