[package]
name = "backend"
version = "0.1.0"
edition = "2018"
authors = ["BobAnkh <bobankhshen@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
once_cell = "1.8.0"
parking_lot = "0.11.2"
criterion = "0.3"

[[test]]
name = "integration"
path = "tests/lib.rs"

[[bench]]
name = "backend_bench"
harness = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = [
    "json",
    "uuid",
    "secrets",
] }
rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = [
    "sqlx_postgres",
] }
sea-orm = { version = "0.4.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["v4", "v5", "serde"] }
rust-crypto = "0.2.36"
deadpool = { version = "0.9.0", features = ["managed", "rt_tokio_1"]}
deadpool-redis = { version = "0.10.0", features = ["rt_tokio_1", "serde"] }
redis = { version = "0.21"}
idgenerator = "1.2.0"
rocket_cors = { git = "https://github.com/BobAnkh/rocket_cors.git", branch = "master"}
pulsar = "4.1.1"
futures = "0.3"
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread", "parking_lot"] }
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
rust-s3 = "0.27.0"
log4rs = "1.0.0"
rand = "0.8.4"
time = "0.3.4"
regex = "1.5.4"
lazy_static = "1.4.0"
check-if-email-exists = "0.8"
async-smtp = "0.4.0"
toml = "0.5.8"
