[package]
name = "benches"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../core" }
criterion = "0.3"
idgenerator = "1.2.0"

[[bench]]
name = "core_bench"
path = "core_bench.rs"
harness = false
