[package]
name = "backend"
version = "1.0.0"
edition = "2018"
authors = ["BobAnkh <bobankhshen@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
once_cell = "1.12.0"
parking_lot = "0.12.1"
criterion = "0.3.5"

# [[test]]
# name = "integration"
# path = "tests/lib.rs"

# [[bench]]
# name = "backend_bench"
# harness = false

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.17"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = [
    "json",
    "uuid",
    "secrets",
] }
rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = [
    "sqlx_postgres",
] }
sea-orm = { version = "0.8.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
], default-features = false }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
uuid = { version = "1.1.2", features = ["v4", "v5", "serde"] }
rust-crypto = "0.2.36"
deadpool = { version = "0.9.5", features = ["managed", "rt_tokio_1"] }
deadpool-redis = { version = "0.10.2", features = ["rt_tokio_1", "serde"] }
redis = "0.21.5"
idgenerator = "2.0.0"
rocket_cors = { git = "https://github.com/BobAnkh/rocket_cors.git", branch = "master" }
pulsar = "4.1.2"
futures = "0.3.21"
tokio = { version = "1.20.3", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
    "signal",
] }
reqwest = { version = "0.11.10", features = ["json", "blocking", "cookies"] }
rust-s3 = "0.31.0"
log4rs = "1.1.1"
rand = "0.8.5"
time = "0.3.11"
regex = "1.5.5"
lazy_static = "1.4.0"
check-if-email-exists = "0.8.30"
async-smtp = "0.5.0"
toml = "0.5.9"
hex = "0.4.3"
