[package]
name = "task-executor"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../core" }
tokio = { version = "1.13.0", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
    "signal",
] }
log = "0.4"
