[package]
name = "tests-integration"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"
parking_lot = "0.12.0"
backend = {path = "../core"}
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = [
    "json",
    "uuid",
    "secrets",
] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
    "signal",
] }
reqwest = { version = "0.11.9", features = ["json", "blocking", "cookies"] }
rand = "0.8.5"

[[test]]
name = "integration"
path = "tests/lib.rs"
harness = true
