[package]
name = "tests-integration"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.12.0"
parking_lot = "0.12.1"
backend = {path = "../core"}
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = [
    "json",
    "uuid",
    "secrets",
] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
    "signal",
] }
reqwest = { version = "0.11.10", features = ["json", "blocking", "cookies"] }
rand = "0.8.5"

[[test]]
name = "integration"
path = "tests/lib.rs"
harness = true
